force-app/main/default/objects/Academic_Institutions_Relationship__c/Academic_Institutions_Relationship__c.object-meta.xml
<CustomObject>
    <label>Academic Institutions Relationship</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Academic Institutions Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Institutions Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>