force-app/main/default/objects/Academic_Institutions_Relationship__c/fields/Academic_Institution__c.field-meta.xml
<CustomField>
    <fullName>Academic_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Healthcare Facilities</relationshipLabel>
    <relationshipName>Academic_Institutions_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>