force-app/main/default/objects/Academic_Institutions_Relationship__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User(owner)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>